--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,10 @@ h6 {
 	font-family: "Raleway", Sans-serif;
 	color: #4A4A4A;
 }
+h4
+{
+ color: rgb(0, 196, 68);   
+}
 p {
 	font-family: 'Raleway', sans-serif;
 	font-size: 15px;
@@ -383,4 +387,26 @@ footer .footer-socials a:hover {
 }
 footer .footer-bottom {
 	padding: 10px 0 40px;
+}
+#landig-page {
+    background-color: darkgray;
+    height: 500px;
+    
+    background-image: url(../images/picjumbo.jpg);
+    background-repeat:no-repeat;
+    background-size:cover;
+    background-position:center;
+    
+    -webkit-filter: invert(.3);
+}
+
+#landing-page-logo {
+    margin-top: 200px;
+}
+
+.green-divisor {
+    background-color: rgb(0, 196, 68);
+    margin: -1px;
+    padding: 0px;
+    height: 5px;
 }
